dist_man1_MANS=

if BUILD_ELECCOIND
  dist_man1_MANS+=eleccoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=eleccoin-qt.1
endif

if BUILD_ELECCOIN_CLI
  dist_man1_MANS+=eleccoin-cli.1
endif

if BUILD_ELECCOIN_TX
  dist_man1_MANS+=eleccoin-tx.1
endif

if BUILD_ELECCOIN_UTIL
  dist_man1_MANS+=eleccoin-util.1
endif

if ENABLE_WALLET
if BUILD_ELECCOIN_WALLET
  dist_man1_MANS+=eleccoin-wallet.1
endif
endif
